--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
           <li><a href="#portfolio"> <span>Projects</span></a></li>
           <li><a href="#skills"> <span>Skills</span></a></li>
           <!-- to change resume -->
-          <li><a href="https://drive.google.com/file/d/1mSlrplnM90xGR965o4Z4UDq2FmfjY1HY/view?usp=drivesdk" target="_blank"> <span>Resume</span></a></li>
+          <li><a href="https://drive.google.com/file/d/1yYbl30Ftff2-ih2oayZm6IbQTTRi_Y7q/view?usp=sharing" target="_blank"> <span>Resume</span></a></li>
           <!-- <li><a href="#links"> <span>Resume & Links</span></a></li> -->
           <li><a href="#contacts"> <span>Contact</span></a></li>
 
