--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 
       <div class="row">
         <div class="col-lg-4" data-aos="fade-right">
-          <img src="website_images\IMG_20240629_133654.jpg" class="img-fluid" alt="">
+          <img src="website_images/WhatsApp Image 2024-08-29 at 10.36.59_9b252916.jpg" class="img-fluid" alt="">
         </div>
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
           <p>I'm a web developer who loves building websites and applications that are both easy to use and look great. Over time, I've learned how to work with various tools and technologies, allowing me to handle everything from the design to the backend. My aim is to create smooth, reliable online experiences that match what businesses and users need.</p>
