--- a/index.html
+++ b/index.html
@@ -217,6 +217,7 @@
               <ul style="text-align:left;color:#fff;">
                 <li>Computer Science Engineering</li>
                 <li>Web development</li>
+                <li>Python developer</li>
                 <li>java developer</li>
             
               </ul>
