--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
                 <li>Computer Science Engineering</li>
                 <li>Web development</li>
                 <li>Python developer</li>
-                <li>java developer</li>
+                <li>Python developer</li>
             
               </ul>
             </div>
