--- a/index.html
+++ b/index.html
@@ -722,7 +722,7 @@
   <script src="assets/vendor/typed.js/typed.min.js"></script>
   <script type="text/javascript">
     var typed = new Typed('.typing',{
-      strings: ["Java Developer","Web Developer" ],
+      strings: ["Python Developer","Web Developer" ],
       loop: true,
       typeSpeed: 65,
       backSpeed: 65
