--- a/index.html
+++ b/index.html
@@ -158,8 +158,8 @@
     
         <div class="col-lg-3 col-md-4 mt-4 mt-md-0">
           <div class="icon-box">
-            <img src="logo\java logo.jpg" alt="Java Logo" style="width: 50px; height: 50px;">
-            <h3> Java</h3>
+            <img src="logo/Python-programming-logo-on-transparent-background-PNG.png" alt="Java Logo" style="width: 50px; height: 50px;">
+            <h3> Python </h3>
           </div>
         </div>
     
