--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
           <li><a href="#portfolio"> <span>Projects</span></a></li>
           <li><a href="#skills"> <span>Skills</span></a></li>
           <!-- to change resume -->
-          <li><a href="https://docs.google.com/document/d/1DVWWOhxViiI9MFsG007uqAUgKJADx0eoy-u5-vMYRFs/edit?usp=sharing" target="_blank"> <span>Resume</span></a></li>
+          <li><a href="https://drive.google.com/file/d/1Jxg3rM_kGJ4q5tkbLHak-kM8juPUkylm/view?usp=sharing" target="_blank"> <span>Resume</span></a></li>
           <!-- <li><a href="#links"> <span>Resume & Links</span></a></li> -->
           <li><a href="#contacts"> <span>Contact</span></a></li>
 
@@ -632,8 +632,8 @@
       </div>
       <div class="row">
         <div class="col-md-3 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100">
-          <a href="https://docs.google.com/document/d/1DVWWOhxViiI9MFsG007uqAUgKJADx0eoy-u5-vMYRFs/edit?usp=sharing" target="_blank"><div class="icon"><i class="icofont-page"></i></div></a>
-          <h4 class="title"><a href="https://docs.google.com/document/d/1DVWWOhxViiI9MFsG007uqAUgKJADx0eoy-u5-vMYRFs/edit?usp=sharing" target="_blank">Resume</a></h4>
+          <a href="https://drive.google.com/file/d/1Jxg3rM_kGJ4q5tkbLHak-kM8juPUkylm/view?usp=sharing" target="_blank"><div class="icon"><i class="icofont-page"></i></div></a>
+          <h4 class="title"><a href="https://drive.google.com/file/d/1Jxg3rM_kGJ4q5tkbLHak-kM8juPUkylm/view?usp=sharing" target="_blank">Resume</a></h4>
           <p class="description" style="color:#fff;">The link contains downloadable resume</p>
         </div>
         <!-- <div class="col-md-3 mt-4 mt-md-0 icon-box" data-aos="fade-up">
